--- a/docs/1前端/javascript/综合.md
+++ b/docs/1前端/javascript/综合.md
@@ -1,59 +1,66 @@
 # 1、最新的 ECMAScript 标准定义了 9 种数据类型:
-- 6种原始类型
-    - String: typeof instance === "string"
-    - Number: typeof instance === "number"
-    - Boolean: typeof instance === "boolean"
-    - undefined: typeof instance === "undefined"
-    - Symbol: typeof instance === "symbol"
-    - BigInt: typeof instance === "bigint"
+
+- 6 种原始类型
+  - String: typeof instance === "string"
+  - Number: typeof instance === "number"
+  - Boolean: typeof instance === "boolean"
+  - undefined: typeof instance === "undefined"
+  - Symbol: typeof instance === "symbol"
+  - BigInt: typeof instance === "bigint"
 - null: typeof instance === "object"
 - Function: typeof instance === "function"
 - Object: typeof instance === "object"
 
-> typeof只能用来检查基本类型数据，检查从Object派生出来的对象，使用typeof不起作用, 因为总是会得到 "object"。检查 Object 种类的合适方式是使用 instanceof 关键字。但即使这样也存在误差。
+> typeof 只能用来检查基本类型数据，检查从 Object 派生出来的对象，使用 typeof 不起作用, 因为总是会得到 "object"。检查 Object 种类的合适方式是使用 instanceof 关键字。但即使这样也存在误差。
 
 > 原始值
 
 除 Object 以外的所有类型都是不可变的（值本身无法被改变）。
 例如，与 C 语言不同，JavaScript 中字符串是不可变的。
-如JavaScript 中对字符串的操作一定返回了一个新字符串，原始字符串并没有被改变。我们称这些类型的值为“原始值”。
+如 JavaScript 中对字符串的操作一定返回了一个新字符串，原始字符串并没有被改变。我们称这些类型的值为“原始值”。
 
-> BigInt类型
-BigInt类型是 JavaScript 中的一个基础的数值类型，可以用任意精度表示整数。
-使用 BigInt，您可以安全地存储和操作大整数，甚至可以超过数字的安全整数限制。
-BigInt是通过在整数末尾附加 n 或调用构造函数来创建的。
+> BigInt 类型
+> BigInt 类型是 JavaScript 中的一个基础的数值类型，可以用任意精度表示整数。
+> 使用 BigInt，您可以安全地存储和操作大整数，甚至可以超过数字的安全整数限制。
+> BigInt 是通过在整数末尾附加 n 或调用构造函数来创建的。
+
 ```js
-var 
+var
 ```
 
 # 2、typeof
-> typeof可以用来判断基本类型、null、object、function。
+
+> typeof 可以用来判断基本类型、null、object、function。
 
 > typeof(null) === 'object'
-原理是这样的， 不同的对象在底层都表示为二进制， 在 JavaScript 中二进制前三位都为 0 的话会被判断为 object 类型， 
-null 的二进制表示是全 0， 自然前三位也是 0， 所以执行 typeof 时会返回“object”。
+> 原理是这样的， 不同的对象在底层都表示为二进制， 在 JavaScript 中二进制前三位都为 0 的话会被判断为 object 类型，
+> null 的二进制表示是全 0， 自然前三位也是 0， 所以执行 typeof 时会返回“object”。
+
 ```js
-typeof null === 'object' // true
-null instanceof Object // false
+typeof null === "object"; // true
+null instanceof Object; // false
 ```
 
 > 判断变量是否存在
-比如直接判断window是否存在，可能会报错
-```js
-if (window) { // Uncaught ReferenceError: window is not defined
+> 比如直接判断 window 是否存在，可能会报错
 
+```js
+if (window) {
+  // Uncaught ReferenceError: window is not defined
 }
 ```
 
 但是使用`typeof`却不会。
-```js
-if (typeof window === "undefined") { 
 
+```js
+if (typeof window === "undefined") {
 }
 ```
 
 # 3、显示类型转换
-> 转string
+
+> 转 string
+
 - undefined --> "undefined"
 - true --> "true", false --> "false"
 - null --> "null"
@@ -63,19 +70,21 @@ if (typeof window === "undefined") {
 - {a: 1} --> "[object Object]"
 - function() {console.log()} --> "function() {console.log()}"
 
-> 转number,使用Number()
+> 转 number,使用 Number()
+
 - undefined --> NaN
 - true --> 1, false --> 0
 - null --> 0
 - "0" --> 0, "" --> 0, "" --> 10, "1d" --> NaN
-- Symbol.for("") --> 报错Cannot convert a Symbol value to a number
+- Symbol.for("") --> 报错 Cannot convert a Symbol value to a number
 - [1, 2] --> NaN, [] --> 0
 - {a: 1} --> NaN, {} --> NaN
 
-> 转布尔值,使用Boolean()
+> 转布尔值,使用 Boolean()
+
 - undefined --> false
 - null --> false
-- 非0数字 --> true, 0 --> false, NaN --> false
+- 非 0 数字 --> true, 0 --> false, NaN --> false
 - "" --> false, "33" --> true
 - Symbol.for("") --> true
 - [1, 2] --> true
@@ -84,29 +93,33 @@ if (typeof window === "undefined") {
 # 4、隐式类型转换
 
 > 字符串和数字之间的隐式转换
+
 ```js
-var a = '42';
-var b = '0';
+var a = "42";
+var b = "0";
 var c = 42;
 var d = 0;
 a + b; // "420" 这个地方，注意一下
 c + d; // 42
 a + d; // "420"
 [] + {}; // [object object]
-{} + []; // 0 这里的{}会被当作是一个代码块，所以本质上是+[]
+{
+}
++[]; // 0 这里的{}会被当作是一个代码块，所以本质上是+[]
 console.log({} + []); // [object object]
 +[]; // 0
 -[]; // -0
 ```
 
 > 隐式强制类型转换为布尔值
+
 - if (..)语句中的条件判断表达式。
 - for ( .. ; .. ; .. )语句中的条件判断表达式(第二个)。
 - while (..) 和 do..while(..) 循环中的条件判断表达式。
 - ? :中的条件判断表达式。
 - 逻辑运算符 ||(逻辑或)和 &&(逻辑与)左边的操作数(作为条件判断表达式)。
 
-> || 与 && 
+> || 与 &&
 
 ```js
 a || b; // 大致相当于(roughly equivalent to): a ? a : b;
@@ -114,88 +127,95 @@ a && b; // 大致相当于(roughly equivalent to): a ? b : a;
 ```
 
 > == 与 ===
-*常见的误区是“== 检查值是否相等，=== 检查值和类型是否相等”*
-*“== 允许在相等比较中进行强制类型转换，而 === 不允许。”*
+> _常见的误区是“== 检查值是否相等，=== 检查值和类型是否相等”_ > _“== 允许在相等比较中进行强制类型转换，而 === 不允许。”_
 
 # 5、作用域
+
 作用域是指程序源代码中*定义变量的区域*。作用域规定了如何查找变量，也就是确定当前执行代码对变量的访问权限。JavaScript 采用词法作用域(lexical scoping)，也就是*静态作用域*。
 
 ## 静态作用域与动态作用域
-- *静态作用域*： 函数的作用域在函数定义的时候就决定了。
-- *动态作用域*： 函数的作用域是在函数调用的时候才决定的。
+
+- _静态作用域_： 函数的作用域在函数定义的时候就决定了。
+- _动态作用域_： 函数的作用域是在函数调用的时候才决定的。
 
 举个例子：
+
 ```js
 var value = 1;
 
 function foo() {
-    console.log(value);
+  console.log(value);
 }
 
 function bar() {
-    var value = 2;
-    foo();
+  var value = 2;
+  foo();
 }
 
 bar(); // 1
-
 ```
 
-假设JavaScript采用静态作用域，让我们分析下执行过程：
+假设 JavaScript 采用静态作用域，让我们分析下执行过程：
 执行 foo 函数，先从 foo 函数内部查找是否有局部变量 value，如果没有，就根据书写的位置，查找上面一层的代码，也就是 value 等于 1，所以结果会打印 1。
 
-假设JavaScript采用动态作用域，让我们分析下执行过程：
+假设 JavaScript 采用动态作用域，让我们分析下执行过程：
 执行 foo 函数，依然是从 foo 函数内部查找是否有局部变量 value。如果没有，就从调用函数的作用域，也就是 bar 函数内部查找 value 变量，所以结果会打印 2。
 
-前面我们已经说了，JavaScript采用的是静态作用域，所以这个例子的结果是 1。
+前面我们已经说了，JavaScript 采用的是静态作用域，所以这个例子的结果是 1。
 
 下面的两个例子都会输出`local scope`。
+
 ```js
 var scope = "global scope";
-function checkscope(){
-    var scope = "local scope";
-    function f(){
-        return scope;
-    }
-    return f();
+function checkscope() {
+  var scope = "local scope";
+  function f() {
+    return scope;
+  }
+  return f();
 }
 checkscope();
 ```
 
 ```js
 var scope = "global scope";
-function checkscope(){
-    var scope = "local scope";
-    function f(){
-        return scope;
-    }
-    return f;
+function checkscope() {
+  var scope = "local scope";
+  function f() {
+    return scope;
+  }
+  return f;
 }
 checkscope()();
 ```
-*JavaScript 函数的执行用到了作用域链，这个作用域链是在函数定义的时候创建的。嵌套的函数 f() 定义在这个作用域链里，其中的变量 scope 一定是局部变量，不管何时何地执行函数 f()，这种绑定在执行 f() 时依然有效。*
+
+_JavaScript 函数的执行用到了作用域链，这个作用域链是在函数定义的时候创建的。嵌套的函数 f() 定义在这个作用域链里，其中的变量 scope 一定是局部变量，不管何时何地执行函数 f()，这种绑定在执行 f() 时依然有效。_
 
 # 6、作用域链
-*当JavaScript代码执行一段可执行代码(executable code)时，会创建对应的执行上下文(execution context)。*
+
+_当 JavaScript 代码执行一段可执行代码(executable code)时，会创建对应的执行上下文(execution context)。_
 
 对于每个执行上下文，都有三个重要属性：
+
 - 变量对象(Variable object，VO)
 - 作用域链(Scope chain)
 - this
 
-当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(*词法层面上的父级*)执行上下文的变量对象中查找，
+当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(_词法层面上的父级_)执行上下文的变量对象中查找，
 一直找到全局上下文的变量对象，也就是全局对象。这样由*多个执行上下文的变量对象构成的链表就叫做作用域链*。
 
 下面，让我们以一个函数的创建和激活两个时期来讲解作用域链是如何创建和变化的。
 
-前面讲到，*函数的作用域在函数定义的时候就决定了*。
+前面讲到，_函数的作用域在函数定义的时候就决定了_。
 
 这是因为函数有一个内部属性 [[scope]]，当函数创建的时候，就会保存所有父变量对象到其中，
 你可以理解 [[scope]] 就是所有父变量对象的层级链，但是注意：[[scope]] 并不代表完整的作用域链！
 
 举个例子：
+
 - 1、创建函数
-```js 
+
+```js
 function foo() {
     function bar() {
         ...
@@ -204,20 +224,16 @@ function foo() {
 ```
 
 函数创建时，各自的[[scope]]为：
-```js
-foo.[[scope]] = [
-  globalContext.VO
-];
 
-bar.[[scope]] = [
-    fooContext.AO,
-    globalContext.VO
-];
+```js
+foo[[scope]] = [globalContext.VO];
+
+bar[[scope]] = [fooContext.AO, globalContext.VO];
 ```
 
 - 2、函数激活
-当函数激活时，进入函数上下文，创建 VO/AO 后，就会将活动对象添加到作用链的前端。
-这时候执行上下文的作用域链，我们命名为 Scope：
+  当函数激活时，进入函数上下文，创建 VO/AO 后，就会将活动对象添加到作用链的前端。
+  这时候执行上下文的作用域链，我们命名为 Scope：
 
 ```js
 Scope = [AO].concat([[Scope]]);
@@ -229,34 +245,32 @@ Scope = [AO].concat([[Scope]]);
 
 ```js
 var scope = "global scope";
-function checkscope(){
-    var scope2 = 'local scope';
-    return scope2;
+function checkscope() {
+  var scope2 = "local scope";
+  return scope2;
 }
 checkscope();
 ```
 
 执行过程如下：
 1.checkscope 函数被创建，保存作用域链到 内部属性[[scope]]
+
 ```js
-checkscope.[[scope]] = [
-    globalContext.VO
-];
+checkscope[[scope]] = [globalContext.VO];
 ```
 
 2.执行 checkscope 函数，创建 checkscope 函数执行上下文，checkscope 函数执行上下文被压入执行上下文栈
+
 ```js
-ECStack = [
-    checkscopeContext,
-    globalContext
-];
+ECStack = [checkscopeContext, globalContext];
 ```
 
 3.checkscope 函数并不立刻执行，开始做准备工作，第一步：复制函数[[scope]]属性创建作用域链
+
 ```js
 checkscopeContext = {
-    Scope: checkscope.[[scope]],
-}
+  Scope: checkscope[[scope]],
+};
 ```
 
 4.第二步：用 arguments 创建活动对象，随后初始化活动对象，加入形参、函数声明、变量声明
@@ -277,33 +291,34 @@ checkscopeContext = {
 
 ```js
 checkscopeContext = {
-    AO: {
-        arguments: {
-            length: 0
-        },
-        scope2: undefined
+  AO: {
+    arguments: {
+      length: 0,
     },
-    Scope: [AO, [[Scope]]]
-}
+    scope2: undefined,
+  },
+  Scope: [AO, [[Scope]]],
+};
 ```
 
 6.准备工作做完，开始执行函数，随着函数的执行，修改 AO 的属性值
+
 ```js
 checkscopeContext = {
-    AO: {
-        arguments: {
-            length: 0
-        },
-        scope2: 'local scope'
+  AO: {
+    arguments: {
+      length: 0,
     },
-    Scope: [AO, [[Scope]]]
-}
+    scope2: "local scope",
+  },
+  Scope: [AO, [[Scope]]],
+};
 ```
+
 7.查找到 scope2 的值，返回后函数执行完毕，函数上下文从执行上下文栈中弹出
+
 ```js
-ECStack = [
-    globalContext
-];
+ECStack = [globalContext];
 ```
 
 - 函数是怎样根据作用域链来查找变量的？
@@ -312,38 +327,44 @@ ECStack = [
 - 作用域链是动态的吗？
 
 # 7、let 和 const 的块级作用域
-### var与const、let的区别？
+
+### var 与 const、let 的区别？
+
 - 块级作用域？
 - 函数作用域？
 - 变量提升？
 - 重复声明？
-# 8、JavaScript之执行上下文栈
+
+# 8、JavaScript 之执行上下文栈
+
 > 顺序执行？
-如果要问到 JavaScript 代码执行顺序的话，想必写过 JavaScript 的开发者都会有个直观的印象，那就是顺序执行，毕竟：
+> 如果要问到 JavaScript 代码执行顺序的话，想必写过 JavaScript 的开发者都会有个直观的印象，那就是顺序执行，毕竟：
+
 ```js
 var foo = function () {
-    console.log('foo1');
-}
+  console.log("foo1");
+};
 
-foo();  // foo1
+foo(); // foo1
 
 var foo = function () {
-    console.log('foo2');
-}
+  console.log("foo2");
+};
 
 foo(); // foo2
 ```
 
 然而去看这段代码：
+
 ```js
 function foo() {
-    console.log('foo1');
+  console.log("foo1");
 }
 
-foo();  // foo2
+foo(); // foo2
 
 function foo() {
-    console.log('foo2');
+  console.log("foo2");
 }
 
 foo(); // foo2
@@ -354,44 +375,44 @@ foo(); // foo2
 
 但是本文真正想让大家思考的是：这个“一段一段”中的“段”究竟是怎么划分的呢？
 
-到底JavaScript引擎遇到一段怎样的代码时才会做“准备工作”呢？
+到底 JavaScript 引擎遇到一段怎样的代码时才会做“准备工作”呢？
 
 > 可执行代码
-这就要说到 JavaScript 的可执行代码(executable code)的类型有哪些了？
-其实很简单，就三种，*全局代码、函数代码、eval代码*。
+> 这就要说到 JavaScript 的可执行代码(executable code)的类型有哪些了？
+> 其实很简单，就三种，_全局代码、函数代码、eval 代码_。
 
 举个例子，当执行到一个函数的时候，就会进行准备工作，这里的“准备工作”，让我们用个更专业一点的说法，就叫做"执行上下文(execution context)"。
 
 > 执行上下文栈
-接下来问题来了，我们写的函数多了去了，如何管理创建的那么多执行上下文呢？
-所以 JavaScript 引擎创建了*执行上下文栈（Execution context stack，ECS）*来管理执行上下文。
+> 接下来问题来了，我们写的函数多了去了，如何管理创建的那么多执行上下文呢？
+> 所以 JavaScript 引擎创建了*执行上下文栈（Execution context stack，ECS）*来管理执行上下文。
 
 为了模拟执行上下文栈的行为，让我们定义执行上下文栈是一个数组：
+
 ```js
 ECStack = [];
 ```
+
 试想当 JavaScript 开始要解释执行代码的时候，最先遇到的就是全局代码，所以初始化的时候首先就会向执行上下文栈压入一个全局执行上下文，我们用 globalContext 表示它，
 并且只有当整个应用程序结束的时候，ECStack 才会被清空，所以程序结束之前， ECStack 最底部永远有个 globalContext：
 
 ```js
-ECStack = [
-    globalContext
-];
+ECStack = [globalContext];
 ```
 
 现在 JavaScript 遇到下面的这段代码了：
 
 ```js
 function fun3() {
-    console.log('fun3')
+  console.log("fun3");
 }
 
 function fun2() {
-    fun3();
+  fun3();
 }
 
 function fun1() {
-    fun2();
+  fun2();
 }
 
 fun1();
@@ -425,33 +446,34 @@ ECStack.pop();
 ```
 
 > 解答思考题
-好啦，现在我们已经了解了执行上下文栈是如何处理执行上下文的，所以让我们看看下面的代码：
+> 好啦，现在我们已经了解了执行上下文栈是如何处理执行上下文的，所以让我们看看下面的代码：
+
 ```js
 // =====
 var scope = "global scope";
-function checkscope(){
-    var scope = "local scope";
-    function f(){
-        return scope;
-    }
-    return f();
+function checkscope() {
+  var scope = "local scope";
+  function f() {
+    return scope;
+  }
+  return f();
 }
 checkscope();
 // ========
 var scope = "global scope";
-function checkscope(){
-    var scope = "local scope";
-    function f(){
-        return scope;
-    }
-    return f;
+function checkscope() {
+  var scope = "local scope";
+  function f() {
+    return scope;
+  }
+  return f;
 }
 checkscope()();
 ```
 
 两段代码执行的结果一样，但是两段代码究竟有哪些不同呢？
 
-*答案就是执行上下文栈的变化不一样。*
+_答案就是执行上下文栈的变化不一样。_
 
 让我们模拟第一段代码：
 
@@ -463,6 +485,7 @@ ECStack.pop();
 ```
 
 让我们模拟第二段代码：
+
 ```js
 ECStack.push(<checkscope> functionContext);
 ECStack.pop();
@@ -473,275 +496,318 @@ ECStack.pop();
 是不是有些不同呢？
 
 # 9、变量对象(了解)
+
 变量对象是与执行上下文相关的数据作用域，存储了在上下文中定义的变量和函数声明。
 因为不同执行上下文下的变量对象稍有不同，所以我们来聊聊全局上下文下的变量对象和函数上下文下的变量对象。
+
 - 全局对象是什么？
 - 全局上下文的变量对象？
 - 函数的上下文是什么时候创建的？（提示： 执行上下文的代码会分成两个阶段进行处理：分析和执行。）
 - 尝试用上下文分析函数和变量的提升？
 - 在创建完上下文时，变量和函数提升的优先级？
 
-
 # 10、闭包
+
 MDN 对闭包的定义为：
+
 > 闭包是指那些能够访问自由变量的函数。
 
 那什么是自由变量呢？
+
 > 自由变量是指在函数中使用的，但既不是函数参数也不是函数的局部变量的变量。
 
 由此，我们可以看出闭包共有两部分组成：
+
 > 闭包 = 函数 + 函数能够访问的自由变量。
 
 - 从理论上来说： 任何函数都是闭包，因为从创建函数开始就已经保存了全局的上下文，所以能访问外部的自由变量。
 - 从实践上来说只要满足下面两个要求即可：
-    - 即使创建函数的上下文已经销毁了， 但是函数依然存在，比如外部函数执行后返回一个新的函数并且被引用。
-    - 使用了自由变量。
+  - 即使创建函数的上下文已经销毁了， 但是函数依然存在，比如外部函数执行后返回一个新的函数并且被引用。
+  - 使用了自由变量。
 
 > 思考：
+
 - 为什么闭包不会被垃圾回收？
 
+# 11、this 指向
 
-# 11、this指向
-- 谁调用函数fn，this就指向谁。this的指向是动态的。
-- 如果是直接调用fn, this就指向全局对象或者是undefined
-- 箭头函数内部没有this, 所以箭头函数的this的指向和定义箭头函数时的外部函数的this指向是一致的。
-- 通过new创建对象时，this指向的是创建的对象。如果构造函数返回一个对象，那么this将会指向这个对象。
+- 谁调用函数 fn，this 就指向谁。this 的指向是动态的。
+- 如果是直接调用 fn, this 就指向全局对象或者是 undefined
+- 箭头函数内部没有 this, 所以箭头函数的 this 的指向和定义箭头函数时的外部函数的 this 指向是一致的。
+- 通过 new 创建对象时，this 指向的是创建的对象。如果构造函数返回一个对象，那么 this 将会指向这个对象。
 
 > 思考：
-- 改变this指向的方式？
-    - bind
-    - call
-    - apply
-    - 箭头函数
-- 什么时候不建议使用箭头函数？bind、call、apply对箭头函数是否有效？
+
+- 改变 this 指向的方式？
+  - bind
+  - call
+  - apply
+  - 箭头函数
+- 什么时候不建议使用箭头函数？bind、call、apply 对箭头函数是否有效？
 
 # 原型和原型链
+
 - https://zhuanlan.zhihu.com/p/87667349
-### Function、Object的关系图
+
+### Function、Object 的关系图
+
 ![yuan_xing](.image\yuan_xing.jpg)
 
 ### 什么是原型？
+
 - 给其它对象提供共享属性的对象。
 - prototype 描述的是两个对象之间的某种关系（其中一个，为另一个提供属性访问权限）。
 
-### __proto__
+### **proto**
 
 ### Object.getPrototypeOf(obj)、Object.setPrototypeOf(obj, obj1)
 
 ### 原型链
-对象A的原型对象B既然是一个普通的对象，那么对象B也会有他自己的原型对象C, 依次类推C也有自己的原型对象, 直到某个对象的原型是null为止。
+
+对象 A 的原型对象 B 既然是一个普通的对象，那么对象 B 也会有他自己的原型对象 C, 依次类推 C 也有自己的原型对象, 直到某个对象的原型是 null 为止。
 如此, 对象的原型的原型的原型...就成了一条链， 就叫原型链。
 
 > 思考：
+
 - 对象的属性访问过程是怎样的？
 - 对象的属性赋值是怎么样的? 赋值原型链上已有的属性？
 
-
 ### 原型继承方式
+
 所谓的原型继承，就是指设置某个对象为另一个对象的原型。
+
 > Object.create()
+
 - 与`Object.setPrototypeOf()`使用场景的区别？
 
 原型式继承。
+
 ```js
 // 创建对象
-const user = {}
+const user = {};
 
 // 添加原型
-Object.setPrototypeOf(user, Object.prototype)
+Object.setPrototypeOf(user, Object.prototype);
 
 // 扩展属性
-obj.firstName = 'zhang'
-obj.lastName = 'san'
+obj.firstName = "zhang";
+obj.lastName = "san";
 ```
+
 显而易见，这样的继承方式过于繁琐。
 
 ### 构造函数加原型继承
+
 ```js
 function User(firstName, lastName) {
-    this.firstName = firstName
-    this.lastName = lastName
+  this.firstName = firstName;
+  this.lastName = lastName;
 }
 
-User.prototype = Object.create(Object.prototype)
-User.prototype.constructor = User
+User.prototype = Object.create(Object.prototype);
+User.prototype.constructor = User;
 
-const user = new User('zhang', 'san')
+const user = new User("zhang", "san");
 ```
 
 > 对象字面量，创建对象的过程
+
 - 1、隐式的`new Object()`创建对象
 - 2、隐式的进行原型继承
 
-###  `Class`继承与原型继承
-> class继承
-- class是用于创造对象的模板，所有具体的对象，都由这个对象模板 + 参数产生出来。
-- 通常来说，data 数据是由 instance 承载，而 methods 行为/方法则在 class 里。也就是说通过class继承，继承的是结构(数据结构)和方法。
+### `Class`继承与原型继承
+
+> class 继承
+
+- class 是用于创造对象的模板，所有具体的对象，都由这个对象模板 + 参数产生出来。
+- 通常来说，data 数据是由 instance 承载，而 methods 行为/方法则在 class 里。也就是说通过 class 继承，继承的是结构(数据结构)和方法。
 
 > 与原型继承的区别
+
 - 基于 prototype 的继承，可以继承数据、结构和行为三者。
 
-> 在JS中， class的继承是通过原型来模拟的。为了迎合 class 的基本行为。prototype 继承数据的能力被屏蔽了。
+> 在 JS 中， class 的继承是通过原型来模拟的。为了迎合 class 的基本行为。prototype 继承数据的能力被屏蔽了。
+
 ```js
 class Test {
-    a = 1
-    constructor(b) {
-        this.b = b
-    }
-    show() {
-        return a + b
-    }
+  a = 1;
+  constructor(b) {
+    this.b = b;
+  }
+  show() {
+    return a + b;
+  }
 }
 ```
 
-> class只是语法糖而已。class能实现的原型都能实现。
-语法糖不一定提供了更强的表达能力，往往相反，语法糖主要是为了开发者的便利性而设计。
+> class 只是语法糖而已。class 能实现的原型都能实现。
+> 语法糖不一定提供了更强的表达能力，往往相反，语法糖主要是为了开发者的便利性而设计。
 
 ### 从数据结构与算法的角度理解 prototype 和 class
+
 - JS Prototype 原型对应的数据结构和算法是什么？
 - 访问原型链的过程就是一个访问链表的过程。
 
 ### 原型会可能会带来的问题
 
 - 1、隐式访问原型属性让程序更不可靠，也容易带来困惑
-看下面的例子：
+  看下面的例子：
 
 ```js
 const Obj = {
-    hasOwnProperty() {
-        return true
-    }
-}
-Obj.hasOwnProperty('f')// 永远返回true
+  hasOwnProperty() {
+    return true;
+  },
+};
+Obj.hasOwnProperty("f"); // 永远返回true
 ```
 
-所以几乎所有的js库，都是使用下面的代码判断：
+所以几乎所有的 js 库，都是使用下面的代码判断：
+
 ```js
-const hasOwn = Object.hasOwnProperty()
-hasOwn.call(Obj, 'f')
+const hasOwn = Object.hasOwnProperty();
+hasOwn.call(Obj, "f");
 ```
-*它们会先将 Object.prototype.hasOwnProperty 保存在一个变量里，然后通过 call 的方式去调用。如此可以保证 hasOwnProperty 的行为，明确知道它是在 Object.prototype 层面的方法。*
 
-- 2、在原型上追加数据和方法，会影响到所有继承该原型的对象。随意修改内置对象Array、String等的原型会造成全局污染，引起不必要的麻烦。
-*大家认为这种做法，相当于对全局变量和命名空间的滥用。很多年前，整个前端开发社区就达成了高度的共识，如无必要，不要随意往原型上拓展方法，特别是全局构造函数里的原型。*
+_它们会先将 Object.prototype.hasOwnProperty 保存在一个变量里，然后通过 call 的方式去调用。如此可以保证 hasOwnProperty 的行为，明确知道它是在 Object.prototype 层面的方法。_
+
+- 2、在原型上追加数据和方法，会影响到所有继承该原型的对象。随意修改内置对象 Array、String 等的原型会造成全局污染，引起不必要的麻烦。
+  _大家认为这种做法，相当于对全局变量和命名空间的滥用。很多年前，整个前端开发社区就达成了高度的共识，如无必要，不要随意往原型上拓展方法，特别是全局构造函数里的原型。_
 
 - 3、基于 prototype 和 class 编写的代码，很难通过代码分析，在构建时进行移除不必要的代码。这项技术叫 Tree-Shaking 或者 Dead Code Elimination。
 
 - 4、不利于代码复用。
-比如react hook解决了class组件的逻辑复用问题。在 class-component 里，我们需要在同一个生命周期里做不同的事情，并且在不同的生命周期里协调同一件事情的不同阶段。
-
-
-
+  比如 react hook 解决了 class 组件的逻辑复用问题。在 class-component 里，我们需要在同一个生命周期里做不同的事情，并且在不同的生命周期里协调同一件事情的不同阶段。
 
 # bind
+
 ```js
 function bind(fn, thisObj) {
-    return function() {
-        thisObj.__fn__ = fn
-        thisObj.__fn__()
-        thisObj.__fn__ = void 0
-    }
+  return function () {
+    thisObj.__fn__ = fn;
+    thisObj.__fn__();
+    thisObj.__fn__ = void 0;
+  };
 }
 
-var bfn = bind(function() {
-    console.log(this.a)
-}, {a: 1})
-bfn() // 1
+var bfn = bind(
+  function () {
+    console.log(this.a);
+  },
+  { a: 1 }
+);
+bfn(); // 1
 ```
+
 > 思考
-- 如果this要绑定null呢？
+
+- 如果 this 要绑定 null 呢？
 
 # call
+
 ```js
 function call(fn, thisObj) {
-    thisObj.__fn__ = fn
-    thisObj.__fn__()
-    thisObj.__fn__ = void 0
+  thisObj.__fn__ = fn;
+  thisObj.__fn__();
+  thisObj.__fn__ = void 0;
 }
 
-call(function() {
-    console.log(this.a)
-}, {a: 1}) // 1
+call(
+  function () {
+    console.log(this.a);
+  },
+  { a: 1 }
+); // 1
 ```
 
 # Promise
+
 > 手写
+
 ```js
-const Mpromise = (function() {
+const Mpromise = (function () {
   const PROMISE_STATUS = {
-    PENDING: 'pending',
-    RESOLVED: 'resolved',
-    REJECTED: 'rejected',
-  }
+    PENDING: "pending",
+    RESOLVED: "resolved",
+    REJECTED: "rejected",
+  };
 
   // 异步执行回调
   function asyncCall(fn) {
-    setTimeout(fn, 0)
+    setTimeout(fn, 0);
   }
 
   // 将promise的状态变成resolved
   function resolvePromise(promise, value) {
     // 状态改变后将不能再更改, 并且注册的回调也只能调用一遍
-    if (PROMISE_STATUS.PENDING !== promise.status) return
-    promise.status = PROMISE_STATUS.RESOLVED
-    promise.value = value
+    if (PROMISE_STATUS.PENDING !== promise.status) return;
+    promise.status = PROMISE_STATUS.RESOLVED;
+    promise.value = value;
     asyncCall(() => {
       for (let i = 0; i < promise.resolveCallbacks.length; i++) {
         // 传入promise的value
-        promise.resolveCallbacks[i](promise.value)
+        promise.resolveCallbacks[i](promise.value);
       }
-    })
+    });
   }
 
   // 将promise的状态变成rejected
   function rejectPromise(promise, reason) {
     // 状态改变后将不能再更改
-    if (PROMISE_STATUS.PENDING !== promise.status) return
-    promise.status = PROMISE_STATUS.REJECTED
-    promise.reason = reason
+    if (PROMISE_STATUS.PENDING !== promise.status) return;
+    promise.status = PROMISE_STATUS.REJECTED;
+    promise.reason = reason;
     asyncCall(() => {
       for (let i = 0; i < promise.rejectCallbacks.length; i++) {
-        promise.rejectCallbacks[i](promise.reason)
+        promise.rejectCallbacks[i](promise.reason);
       }
-    })
+    });
   }
 
   function Mpromise(executor) {
-    this.resolveCallbacks = []
-    this.rejectCallbacks = []
-    this.status = PROMISE_STATUS.PENDING
-    this.value = undefined
-    this.reason = undefined
+    this.resolveCallbacks = [];
+    this.rejectCallbacks = [];
+    this.status = PROMISE_STATUS.PENDING;
+    this.value = undefined;
+    this.reason = undefined;
 
-    const resolve = value => resolvePromise(this, value)
-    const reject =  reason => rejectPromise(this, reason)
+    const resolve = (value) => resolvePromise(this, value);
+    const reject = (reason) => rejectPromise(this, reason);
 
     // 执行构造函数回调报错时捕获异常并reject
     try {
-      executor(resolve, reject)
-    } catch(e) {
-      reject(e)
+      executor(resolve, reject);
+    } catch (e) {
+      reject(e);
     }
   }
 
-  function resolvePromiseWithCallback(resolvePromise2, rejectPromise2, callback, promise1Value) {
+  function resolvePromiseWithCallback(
+    resolvePromise2,
+    rejectPromise2,
+    callback,
+    promise1Value
+  ) {
     // 执行回调后的返回值
-    let returnVal
+    let returnVal;
     try {
-      returnVal = callback(promise1Value)
+      returnVal = callback(promise1Value);
       // 如果promise1传过来的是一个promise对象，则等待这个promise的状态发生改变
       if (returnVal instanceof Mpromise) {
-        returnVal.then(value => {
-          resolvePromise2(value)
-        }, reason => {
-          rejectPromise2(reason)
-        })
-      // 非promise对象直接resolve
+        returnVal.then(
+          (value) => {
+            resolvePromise2(value);
+          },
+          (reason) => {
+            rejectPromise2(reason);
+          }
+        );
+        // 非promise对象直接resolve
       } else {
-        resolvePromise2(returnVal)
+        resolvePromise2(returnVal);
       }
-    } catch(error) {
-      rejectPromise2(error)
+    } catch (error) {
+      rejectPromise2(error);
     }
   }
 
@@ -750,79 +816,108 @@ const Mpromise = (function() {
 
     then(resCallback, rejCallback) {
       // 如果resCallback不是一个函数， 则给一个返回value的默认函数
-      resCallback = typeof resCallback === 'function'? resCallback: function defaultResCallback(value) {
-        return value
-      }
+      resCallback =
+        typeof resCallback === "function"
+          ? resCallback
+          : function defaultResCallback(value) {
+              return value;
+            };
 
       // 如果resCallback不是一个函数， 则给一个返回reason的Error对象
-      rejCallback = typeof rejCallback === 'function'? rejCallback: function defaultRejCallback(reason) {
-        if (reason instanceof Error) {
-          throw reason
-        } else {
-          throw new Error(reason)
-        }
-      }
+      rejCallback =
+        typeof rejCallback === "function"
+          ? rejCallback
+          : function defaultRejCallback(reason) {
+              if (reason instanceof Error) {
+                throw reason;
+              } else {
+                throw new Error(reason);
+              }
+            };
 
-      const promise1 = this
+      const promise1 = this;
 
-      const promise2 =  new Mpromise(function(resolvePromise2, rejectPromise2){
+      const promise2 = new Mpromise(function (resolvePromise2, rejectPromise2) {
         // 如果已经是resolve状态了
         if (PROMISE_STATUS.RESOLVED === promise1.status) {
-          asyncCall(function(){
-            resolvePromiseWithCallback(resolvePromise2, rejectPromise2, resCallback, promise1.value)
-          })
-        // 如果已经是reject状态了
+          asyncCall(function () {
+            resolvePromiseWithCallback(
+              resolvePromise2,
+              rejectPromise2,
+              resCallback,
+              promise1.value
+            );
+          });
+          // 如果已经是reject状态了
         } else if (PROMISE_STATUS.REJECTED === promise1.status) {
-          asyncCall(function(){
-            resolvePromiseWithCallback(resolvePromise2, rejectPromise2, rejCallback, promise1.reason)
-          })
-        // 如果状态还未发生改变
+          asyncCall(function () {
+            resolvePromiseWithCallback(
+              resolvePromise2,
+              rejectPromise2,
+              rejCallback,
+              promise1.reason
+            );
+          });
+          // 如果状态还未发生改变
         } else if (PROMISE_STATUS.PENDING === promise1.status) {
-          promise1.resolveCallbacks.push(function(value) {
-            resolvePromiseWithCallback(resolvePromise2, rejectPromise2, resCallback, value)
-          })
-          promise1.rejectCallbacks.push(function(reason) {
-            resolvePromiseWithCallback(resolvePromise2, rejectPromise2, rejCallback, reason)
-          })
+          promise1.resolveCallbacks.push(function (value) {
+            resolvePromiseWithCallback(
+              resolvePromise2,
+              rejectPromise2,
+              resCallback,
+              value
+            );
+          });
+          promise1.rejectCallbacks.push(function (reason) {
+            resolvePromiseWithCallback(
+              resolvePromise2,
+              rejectPromise2,
+              rejCallback,
+              reason
+            );
+          });
         }
-      })
+      });
 
-      return promise2
+      return promise2;
     },
 
     catch(rejCallback) {
-      return this.then(null, rejCallback)
+      return this.then(null, rejCallback);
     },
 
     finally(callback) {
-      const promise1 = this
+      const promise1 = this;
       return new Mpromise((resolve, reject) => {
-        promise1.then(function(value){
-          resolvePromiseWithCallback(resolve, reject, callback, value)
-        }, function(reason){
-          resolvePromiseWithCallback(resolve, reject, callback, reason)
-        })
-      })
-    }
-  }
+        promise1.then(
+          function (value) {
+            resolvePromiseWithCallback(resolve, reject, callback, value);
+          },
+          function (reason) {
+            resolvePromiseWithCallback(resolve, reject, callback, reason);
+          }
+        );
+      });
+    },
+  };
 
-  return Mpromise
-})()
+  return Mpromise;
+})();
 
-var p1 = new Mpromise((resolve, reject) =>  {
+var p1 = new Mpromise((resolve, reject) => {
   // resolve('jj')
-  debugger
+  debugger;
   setTimeout(() => {
-    reject('1')
-  })
-})
-p1.name = 'p1'
+    reject("1");
+  });
+});
+p1.name = "p1";
 
-var p2 = p1.then(data => {
-  console.log('then',data)
-  return 1
-})
-p2.name = 'p2'
+var p2 = p1.then((data) => {
+  console.log("then", data);
+  return 1;
+});
+p2.name = "p2";
 
 // var p3 = p2.catch(data => {
 //   console.log('catch',data)
@@ -831,21 +926,22 @@ p2.name = 'p2'
 // var p4 = p3.finally(() => {
 //   console.log('finally')
 // })
-
 ```
 
 > 参考
+
 - https://blog.csdn.net/dennis_jiang/article/details/105389519
+
 ```js
 // 先定义三个常量表示状态
-var PENDING = 'pending';
-var FULFILLED = 'fulfilled';
-var REJECTED = 'rejected';
+var PENDING = "pending";
+var FULFILLED = "fulfilled";
+var REJECTED = "rejected";
 
 function MyPromise(fn) {
-  this.status = PENDING;    // 初始状态为pending
-  this.value = null;        // 初始化value
-  this.reason = null;       // 初始化reason
+  this.status = PENDING; // 初始状态为pending
+  this.value = null; // 初始化value
+  this.reason = null; // 初始化reason
 
   // 构造函数里面添加两个数组存储成功和失败的回调
   this.onFulfilledCallbacks = [];
@@ -860,7 +956,7 @@ function MyPromise(fn) {
       that.value = value;
 
       // resolve里面将所有成功的回调拿出来执行
-      that.onFulfilledCallbacks.forEach(callback => {
+      that.onFulfilledCallbacks.forEach((callback) => {
         callback(that.value);
       });
     }
@@ -873,7 +969,7 @@ function MyPromise(fn) {
       that.reason = reason;
 
       // resolve里面将所有失败的回调拿出来执行
-      that.onRejectedCallbacks.forEach(callback => {
+      that.onRejectedCallbacks.forEach((callback) => {
         callback(that.reason);
       });
     }
@@ -890,7 +986,9 @@ function resolvePromise(promise, x, resolve, reject) {
   // 如果 promise 和 x 指向同一对象，以 TypeError 为据因拒绝执行 promise
   // 这是为了防止死循环
   if (promise === x) {
-    return reject(new TypeError('The promise and the return value are the same'));
+    return reject(
+      new TypeError("The promise and the return value are the same")
+    );
   }
 
   if (x instanceof MyPromise) {
@@ -902,14 +1000,14 @@ function resolvePromise(promise, x, resolve, reject) {
     }, reject);
   }
   // 如果 x 为对象或者函数
-  else if (typeof x === 'object' || typeof x === 'function') {
+  else if (typeof x === "object" || typeof x === "function") {
     // 这个坑是跑测试的时候发现的，如果x是null，应该直接resolve
     if (x === null) {
       return resolve(x);
     }
 
     try {
-      // 把 x.then 赋值给 then 
+      // 把 x.then 赋值给 then
       var then = x.then;
     } catch (error) {
       // 如果取 x.then 的值时抛出错误 e ，则以 e 为据因拒绝 promise
@@ -917,7 +1015,7 @@ function resolvePromise(promise, x, resolve, reject) {
     }
 
     // 如果 then 是函数
-    if (typeof then === 'function') {
+    if (typeof then === "function") {
       var called = false;
       // 将 x 作为函数的作用域 this 调用之
       // 传递两个回调函数作为参数，第一个参数叫做 resolvePromise ，第二个参数叫做 rejectPromise
@@ -939,7 +1037,8 @@ function resolvePromise(promise, x, resolve, reject) {
             if (called) return;
             called = true;
             reject(r);
-          });
+          }
+        );
       } catch (error) {
         // 如果调用 then 方法抛出了异常 e：
         // 如果 resolvePromise 或 rejectPromise 已经被调用，则忽略之
@@ -962,28 +1061,28 @@ MyPromise.prototype.then = function (onFulfilled, onRejected) {
   // 如果onFulfilled不是函数，给一个默认函数，返回value
   // 后面返回新promise的时候也做了onFulfilled的参数检查，这里可以删除，暂时保留是为了跟规范一一对应，看得更直观
   var realOnFulfilled = onFulfilled;
-  if (typeof realOnFulfilled !== 'function') {
+  if (typeof realOnFulfilled !== "function") {
     realOnFulfilled = function (value) {
       return value;
-    }
+    };
   }
 
   // 如果onRejected不是函数，给一个默认函数，返回reason的Error
   // 后面返回新promise的时候也做了onRejected的参数检查，这里可以删除，暂时保留是为了跟规范一一对应，看得更直观
   var realOnRejected = onRejected;
-  if (typeof realOnRejected !== 'function') {
+  if (typeof realOnRejected !== "function") {
     realOnRejected = function (reason) {
       throw reason;
-    }
+    };
   }
 
-  var that = this;   // 保存一下this
+  var that = this; // 保存一下this
 
   if (this.status === FULFILLED) {
     var promise2 = new MyPromise(function (resolve, reject) {
       setTimeout(function () {
         try {
-          if (typeof onFulfilled !== 'function') {
+          if (typeof onFulfilled !== "function") {
             resolve(that.value);
           } else {
             var x = realOnFulfilled(that.value);
@@ -1002,7 +1101,7 @@ MyPromise.prototype.then = function (onFulfilled, onRejected) {
     var promise2 = new MyPromise(function (resolve, reject) {
       setTimeout(function () {
         try {
-          if (typeof onRejected !== 'function') {
+          if (typeof onRejected !== "function") {
             reject(that.reason);
           } else {
             var x = realOnRejected(that.reason);
@@ -1023,7 +1122,7 @@ MyPromise.prototype.then = function (onFulfilled, onRejected) {
       that.onFulfilledCallbacks.push(function () {
         setTimeout(function () {
           try {
-            if (typeof onFulfilled !== 'function') {
+            if (typeof onFulfilled !== "function") {
               resolve(that.value);
             } else {
               var x = realOnFulfilled(that.value);
@@ -1037,7 +1136,7 @@ MyPromise.prototype.then = function (onFulfilled, onRejected) {
       that.onRejectedCallbacks.push(function () {
         setTimeout(function () {
           try {
-            if (typeof onRejected !== 'function') {
+            if (typeof onRejected !== "function") {
               reject(that.reason);
             } else {
               var x = realOnRejected(that.reason);
@@ -1046,13 +1145,13 @@ MyPromise.prototype.then = function (onFulfilled, onRejected) {
           } catch (error) {
             reject(error);
           }
-        }, 0)
+        }, 0);
       });
     });
 
     return promise2;
   }
-}
+};
 
 MyPromise.deferred = function () {
   var result = {};
@@ -1062,7 +1161,7 @@ MyPromise.deferred = function () {
   });
 
   return result;
-}
+};
 
 MyPromise.resolve = function (parameter) {
   if (parameter instanceof MyPromise) {
@@ -1072,13 +1171,13 @@ MyPromise.resolve = function (parameter) {
   return new MyPromise(function (resolve) {
     resolve(parameter);
   });
-}
+};
 
 MyPromise.reject = function (reason) {
   return new MyPromise(function (resolve, reject) {
     reject(reason);
   });
-}
+};
 
 MyPromise.all = function (promiseList) {
   var resPromise = new MyPromise(function (resolve, reject) {
@@ -1091,20 +1190,23 @@ MyPromise.all = function (promiseList) {
     }
 
     promiseList.forEach(function (promise, index) {
-      MyPromise.resolve(promise).then(function (value) {
-        count++;
-        result[index] = value;
-        if (count === length) {
-          resolve(result);
+      MyPromise.resolve(promise).then(
+        function (value) {
+          count++;
+          result[index] = value;
+          if (count === length) {
+            resolve(result);
+          }
+        },
+        function (reason) {
+          reject(reason);
         }
-      }, function (reason) {
-        reject(reason);
-      });
+      );
     });
   });
 
   return resPromise;
-}
+};
 
 MyPromise.race = function (promiseList) {
   var resPromise = new MyPromise(function (resolve, reject) {
@@ -1114,33 +1216,39 @@ MyPromise.race = function (promiseList) {
       return resolve();
     } else {
       for (var i = 0; i < length; i++) {
-        MyPromise.resolve(promiseList[i]).then(function (value) {
-          return resolve(value);
-        }, function (reason) {
-          return reject(reason);
-        });
+        MyPromise.resolve(promiseList[i]).then(
+          function (value) {
+            return resolve(value);
+          },
+          function (reason) {
+            return reject(reason);
+          }
+        );
       }
     }
   });
 
   return resPromise;
-}
+};
 
 MyPromise.prototype.catch = function (onRejected) {
   this.then(null, onRejected);
-}
+};
 
 MyPromise.prototype.finally = function (fn) {
-  return this.then(function (value) {
-    return MyPromise.resolve(fn()).then(function () {
-      return value;
-    });
-  }, function (error) {
-    return MyPromise.resolve(fn()).then(function () {
-      throw error
-    });
-  });
-}
+  return this.then(
+    function (value) {
+      return MyPromise.resolve(fn()).then(function () {
+        return value;
+      });
+    },
+    function (error) {
+      return MyPromise.resolve(fn()).then(function () {
+        throw error;
+      });
+    }
+  );
+};
 
 MyPromise.allSettled = function (promiseList) {
   return new MyPromise(function (resolve) {
@@ -1152,67 +1260,143 @@ MyPromise.allSettled = function (promiseList) {
       return resolve(result);
     } else {
       for (var i = 0; i < length; i++) {
-
         (function (i) {
           var currentPromise = MyPromise.resolve(promiseList[i]);
 
-          currentPromise.then(function (value) {
-            count++;
-            result[i] = {
-              status: 'fulfilled',
-              value: value
+          currentPromise.then(
+            function (value) {
+              count++;
+              result[i] = {
+                status: "fulfilled",
+                value: value,
+              };
+              if (count === length) {
+                return resolve(result);
+              }
+            },
+            function (reason) {
+              count++;
+              result[i] = {
+                status: "rejected",
+                reason: reason,
+              };
+              if (count === length) {
+                return resolve(result);
+              }
             }
-            if (count === length) {
-              return resolve(result);
-            }
-          }, function (reason) {
-            count++;
-            result[i] = {
-              status: 'rejected',
-              reason: reason
-            }
-            if (count === length) {
-              return resolve(result);
-            }
-          });
-        })(i)
+          );
+        })(i);
       }
     }
   });
-}
+};
 
 module.exports = MyPromise;
 ```
 
-# setImmediate、setTimeout的区别？
+# setImmediate、setTimeout 的区别？
 
+# 防抖、节流
 
+# 介绍下深度优先遍历和广度优先遍历，如何实现？
 
+```js
+let tree = {
+  value: 1,
+  children: [
+    {
+      value: 2,
+      children: [
+        {
+          value: 6,
+        },
+      ],
+    },
+    {
+      value: 3,
+      children: [
+        {
+          value: 7,
+        },
+      ],
+    },
+    {
+      value: 4,
+      children: [
+        {
+          value: 8,
+        },
+      ],
+    },
+    {
+      value: 5,
+    },
+  ],
+};
 
+// 深度优先
+function visitTree(tree) {
+  if (!tree) return;
+  console.log(tree.value);
+  if (tree.children) {
+    for (let i = 0; i < tree.children.length; i++) {
+      visitTree(tree.children[i]);
+    }
+  }
+}
 
+// 广度优先
+function visitTree1(tree) {
+  if (!tree) return;
+  console.log(tree.value);
+  const queue = [tree];
+  let i;
+  while (i = queue.shift()) {
+    console.log(i.value);
+    if (i.children) {
+      i.children.forEach((item) => {
+        queue.push(item);
+      });
+    }
+  }
+}
+```
 
+### ES5/ES6 的继承除了写法以外还有什么区别？
 
+> 题目： https://github.com/yygmind/blog/issues/43
 
+### 执行顺序
+```js
+async function async1() {
+    console.log('async1 start');
+    await async2();
+    console.log('async1 end');
+}
+async function async2() {
+    console.log('async2');
+}
+console.log('script start');
+setTimeout(function() {
+    console.log('setTimeout');
+}, 0)
+async1();
+new Promise(function(resolve) {
+    console.log('promise1');
+    resolve();
+}).then(function() {
+    console.log('promise2');
+});
+console.log('script end');
 
+// script start
+// async1 start
+// async2
+// promise1
+// script end
+// async1 end
+// promise2
+// setTimeout
+```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+### JS 异步解决方案的发展历程以及优缺点。
